// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`headline renders correctly with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  margin: 0;
  color: #0a0a0a;
}

@media screen and (max-width:479px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 36px;
    line-height: 1.2222222222222223;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2611111111111112em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3236111111111112em;
  }
}

@media screen and (min-width:480px) and (max-width:1023px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 36px;
    line-height: 1.2222222222222223;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2611111111111112em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3236111111111112em;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 44px;
    line-height: 1.2727272727272727;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2863636363636364em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3488636363636364em;
  }
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<h1
    class="emotion-0"
  >
    test
  </h1>
</DocumentFragment>
`;

exports[`headline renders correctly with default props 2`] = `
<DocumentFragment>
  .emotion-1 {
  display: inline-block;
  margin: 0;
  color: #0a0a0a;
}

@media screen and (max-width:479px) {
  .emotion-1 {
    font-family: "Noto Sans",sans-serif;
    font-size: 36px;
    line-height: 1.2222222222222223;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2611111111111112em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3236111111111112em;
  }
}

@media screen and (min-width:480px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Noto Sans",sans-serif;
    font-size: 36px;
    line-height: 1.2222222222222223;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2611111111111112em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3236111111111112em;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-1 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-1 {
    font-family: "Noto Sans",sans-serif;
    font-size: 44px;
    line-height: 1.2727272727272727;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2863636363636364em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3488636363636364em;
  }
}

.emotion-1 svg {
  fill: #0a0a0a;
}

.emotion-2 {
  display: block;
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  color: #0a68c1;
  text-transform: uppercase;
}

@media screen and (max-width:479px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 36px;
    line-height: 1.2222222222222223;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2611111111111112em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3236111111111112em;
  }
}

@media screen and (min-width:480px) and (max-width:1023px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 36px;
    line-height: 1.2222222222222223;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2611111111111112em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3236111111111112em;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 44px;
    line-height: 1.2727272727272727;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2863636363636364em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3488636363636364em;
  }
}

.emotion-0 svg {
  fill: #0a68c1;
}

@media screen and (max-width:479px) {
  .emotion-0 {
    margin-right: 12px;
  }
}

@media screen and (min-width:480px) and (max-width:1023px) {
  .emotion-0 {
    margin-right: 12px;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-0 {
    margin-right: 16px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    margin-right: 16px;
  }
}

<section
    class="emotion-2"
  >
    <h5
      class="emotion-0"
    >
      this is kicker 
    </h5>
    <h4
      class="emotion-1"
    >
      test
    </h4>
  </section>
</DocumentFragment>
`;

exports[`headline renders correctly with overriden props 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: block;
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0a68c1;
  text-transform: uppercase;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #0a68c1;
}

@media screen and (max-width:479px) {
  .emotion-0 {
    margin-right: 12px;
  }
}

@media screen and (min-width:480px) and (max-width:1023px) {
  .emotion-0 {
    margin-right: 12px;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-0 {
    margin-right: 16px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    margin-right: 16px;
  }
}

.emotion-1 {
  display: inline-block;
  margin: 0;
  color: #0a68c1;
}

@media screen and (max-width:479px) {
  .emotion-1 {
    font-family: "Noto Sans",sans-serif;
    font-size: 36px;
    line-height: 1.2222222222222223;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2611111111111112em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3236111111111112em;
  }
}

@media screen and (min-width:480px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Noto Sans",sans-serif;
    font-size: 36px;
    line-height: 1.2222222222222223;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2611111111111112em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3236111111111112em;
  }
}

@media screen and (min-width:1024px) and (max-width:1439px) {
  .emotion-1 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.3;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30000000000000004em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36250000000000004em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-1 {
    font-family: "Noto Sans",sans-serif;
    font-size: 44px;
    line-height: 1.2727272727272727;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2863636363636364em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3488636363636364em;
  }
}

.emotion-1 svg {
  fill: #0a68c1;
}

.emotion-1:hover:not(:disabled) {
  color: #02509b;
}

.emotion-1:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-1:active:not(:disabled) {
  color: #01396e;
}

.emotion-1:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-1:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-1:visited:not(:disabled) svg {
  fill: #7547a3;
}

<section
    class="emotion-2"
  >
    <h5
      class="emotion-0"
    >
      this is kicker 
    </h5>
    <h4
      class="emotion-1"
    >
      test
    </h4>
  </section>
</DocumentFragment>
`;
